Timeline example with pizza images and text

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -10,12 +10,20 @@
     <script src="./main.js"></script>
     <title>Timeline</title>
   </head>
-  <body class="brd">
+  <body>
     <img src="./resources/1.webp" id="p1" alt="Pizza" />
     <img src="./resources/2.webp" id="p2" alt="Pizza" />
     <img src="./resources/3.webp" id="p3" alt="Pizza" />
     <img src="./resources/4.webp" id="p4" alt="Pizza" />
     <img src="./resources/5.webp" id="p5" alt="Pizza" />
     <img src="./resources/6.webp" id="p6" alt="Pizza" />
+
+    <ul>
+      <li>P</li>
+      <li>I</li>
+      <li>Z</li>
+      <li>Z</li>
+      <li>A</li>
+    </ul>
   </body>
 </html>
