header for cgi project

--- a/scrolltrigger cgi effect/index.html
+++ b/scrolltrigger cgi effect/index.html
@@ -11,11 +11,15 @@
     <title>CGI</title>
   </head>
   <body class="brd">
-    <!-- <header></header> -->
+    <header>
+      <h1>CGI effects gallery</h1>
+      <span class="small">with GSAP scroll</span>
+      <p id="scroll-down">Scroll down</p>
+    </header>
     <div class="container relative brd">
-      <img src="./resources/thor1.jpeg" />
+      <img src="./images/thor1.jpeg" />
       <span>
-        <img src="./resources/thor2.jpeg" id="scr" />
+        <img src="./images/thor2.jpeg" id="scr" />
       </span>
     </div>
   </body>
