--- a/scrolltrigger cgi effect/index.html
+++ b/scrolltrigger cgi effect/index.html
@@ -22,5 +22,15 @@
         <img src="./images/thor2.jpeg" id="scr" />
       </span>
     </div>
+    <h2 class="sp-h">Spider man multiple layer rendering</h2>
+    <div class="multiple-layers relative brd">
+      <img src="./images/sp1.jpg" />
+      <span>
+        <img src="./images/sp2.jpg" />
+      </span>
+      <span>
+        <img src="./images/sp3.jpg" />
+      </span>
+    </div>
   </body>
 </html>
